# Agents_influencers

./: README.md
front_end_plataform_agents/: README.MD  dockerfile  requirements.txt
front_end_plataform_agents/app/: main.py
ms_flow_agents_influencers/: .env  .gitignore  README.md  dockerfile  requirements.txt
ms_flow_agents_influencers/src/flow_agents/: crew.py  main.py  pyproject.toml
ms_flow_agents_influencers/src/flow_agents/api/: main_api.py  routes.py
ms_flow_agents_influencers/src/flow_agents/config/: agent_manager.yaml  agents.yaml  tasks.yaml
ms_flow_agents_influencers/src/flow_agents/tools/: custom_tool.py
